--- a/.github/workflows/maven_2.yml
+++ b/.github/workflows/maven_2.yml
@@ -10,6 +10,20 @@ on:
     branches: [ master ]
 
 jobs:
+
+  test:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Run test with Maven
+      run: mvn -B clean test
+  
+  
   build:
 
     runs-on: ubuntu-latest
@@ -21,4 +35,10 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean package --file pom.xml
+    - name: Upload jar artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: build/162967_SimoneCassetta_Homework_Qualita-1.0-SNAPSHOT.jar
+      
